RWA-1712 Resolving sonar cloud errors and PMD Fixes