@@ -46,7 +46,6 @@ import java.util.stream.Collectors;
 import javax.validation.ConstraintViolationException;
 
 import static java.util.Comparator.comparing;
-import static java.util.stream.Collectors.toList;
 import static org.springframework.http.HttpHeaders.CONTENT_TYPE;
 import static org.springframework.http.MediaType.APPLICATION_JSON_VALUE;
 import static org.springframework.http.MediaType.APPLICATION_PROBLEM_JSON_VALUE;
@@ -172,7 +171,7 @@ public class ApplicationProblemControllerAdvice extends BaseControllerAdvice imp
 
         final List<Violation> violations = ex.getConstraintViolations().stream()
             .map(this::createViolation)
-            .collect(toList());
+            .toList();
 
         return ResponseEntity.status(status.getStatusCode())
             .header(CONTENT_TYPE, APPLICATION_PROBLEM_JSON_VALUE)
@@ -200,7 +199,7 @@ public class ApplicationProblemControllerAdvice extends BaseControllerAdvice imp
         List<Violation> violations = streamViolations.stream()
             // sorting to make tests deterministic
             .sorted(comparing(Violation::getField).thenComparing(Violation::getMessage))
-            .collect(toList());
+            .toList();
 
         return ResponseEntity.status(status.getStatusCode())
             .header(CONTENT_TYPE, APPLICATION_PROBLEM_JSON_VALUE)
